BUG FIX: fixed issue where recipes sometimes didm't have margins between them and the triangle was too small at small screen sizes and overflowed sometimes.

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -53,7 +53,7 @@ ul{
 }
 
 .recipe-container {
-    width: 245px;
+    margin-top:20px;
     height: 350px;
     background-color: #ffffff;
 }
@@ -64,20 +64,35 @@ ul{
     height: 250px;
     background-size: cover;
     position: relative;
-}
+    overflow: hidden;
 
-.white-triangle {
+}
+.recipe-image:before {
+    content: '';
+    position: absolute;
+    bottom: 0; left: 0;
+    border-left: 300px solid white;
+    border-top: 80px solid transparent;
     width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 80px 0 0 270px;
-    border-color: transparent transparent transparent #ffffff;
-    position:absolute;
-    bottom: 0;
-
 }
 
-.recipe-text {
+@media (max-width:1200px) and (min-width: 992px)
+{
+    .recipe-image:before {
+        border-left: 500px solid white;
+        border-top: 80px solid transparent;
+    }
+}
+
+@media (max-width:991px)
+{
+    .recipe-image:before {
+        border-left: 1000px solid white;
+        border-top: 80px solid transparent;
+    }
+}
+
+    .recipe-text {
     margin-bottom:50px;
     padding-left:20px;
     padding-right:20px;
